# komodo

./: .gitignore  README.md  graphql.config.yml  komodo.code-workspace  piccolo_app.py  piccolo_conf.py  pyproject.toml  run
.github/: dependabot.yml
bot/: komodo  pyproject.toml
bot/migrations/: komodo_2024_09_01t23_03_17_070215.py  komodo_2024_09_08t21_03_24_475454.py  komodo_2024_09_08t21_15_31_484039.py  komodo_2024_09_13t13_22_55_366925.py  komodo_2024_09_13t14_44_40_820279.py  komodo_2024_09_14t14_42_22_603715.py  komodo_2024_09_15t21_11_57_921878.py  komodo_2024_09_15t22_34_30_270923.py  komodo_2024_09_15t22_53_39_219516.py  komodo_2024_09_15t23_30_04_192798.py
bot/resources/: pnw_api_schema.graphql  queries.graphql
bot/resources/chatbot/: ai_instructions.txt
bot/scripts/: run
bot/src/: utils.py
bot/src/bot/: __init__.py  bot.py
bot/src/config/: logging_conf.py
bot/src/database/: base_table.py  update.py
migrations/: komodo_2024_06_12t20_11_17_358969.py  komodo_2024_06_15t01_04_51_832650.py  komodo_2024_06_17t00_27_42_723162.py  komodo_2024_06_19t01_05_02_889126.py  komodo_2024_08_25t14_20_02_608002.py  komodo_2024_08_25t14_20_27_627608.py  komodo_2024_08_25t18_29_21_546048.py  komodo_2024_08_25t22_23_13_801879.py  komodo_2024_08_31t13_53_28_700385.py  komodo_2024_08_31t14_44_26_943831.py  komodo_2024_08_31t18_54_39_713488.py  komodo_2024_08_31t19_09_25_553839.py  komodo_2024_09_01t18_34_24_758977.py  komodo_2024_09_01t23_05_51_814680.py
resources/: pnw_api_schema.graphql  queries.graphql
resources/chatbot/: ai_instructions.txt
scripts/: generate_env
src/: __init__.py  bot.py  logging.py  main.py  piccolo_app.py  settings.py  tables.py  utils.py
src/bot/: __init__.py  bot.py  persistent_view.py  stateful_embed.py
src/cogs/: developer.py  error_handler.py  snipe.py
src/config/: __init__.py  logging_conf.py  logging_config.py  settings.py
src/database/: base_table.py  update.py
src/discord/: __init__.py  stateful_embed.py
src/piccolo_migrations/: komodo_2024_06_06t00_57_44_784963.py
src/pnw/: __init__.py  paginator.py  ratelimited_async_client.py  ratelimited_client_base.py  sync.py  utils.py
src/tables/: enums.py  nation.py  pnw.py  pnw_old.py  user_settings.py
(+60 files in other folders)
