[tool.poetry]
name = "komodo-pathfinder"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
hikari = {extras = ["speedups"], version = "^2.0.0.dev125"}
uvloop = "^0.19.0"
pydantic = "^2.7.2"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"
tomli-w = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
