[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
hikari = { extras = ["speedups"], version = "^2.0.0.dev125" }
uvloop = "^0.19.0"
pydantic = "^2.7.2"
pydantic-settings = "^2.2.1"
tomli-w = "^1.0.0"
hikari-arc = "^1.3.3"
discord-py = "^2.3.2"
piccolo = { extras = ["all"], version = "^1.7.0" }
pylint = "^3.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
reportUnknownMemberType = false
reportUnknownVariableType = false
typeCheckingMode = "strict"

[tool.pylint]
max-line-length = 120
disable = ["W0107", "R0913", "C0414"]
